--- a/package.json
+++ b/package.json
@@ -5,20 +5,14 @@
   "scripts": {
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "cy:run:headed": "cypress run --headed",
-    "report:merge": "mochawesome-merge cypress/reports/*.json > cypress/reports/report.json",
-    "report:generate": "marge cypress/reports/report.json -f report -o cypress/reports/html",
-    "test:report": "npm run cy:run && npm run report:merge && npm run report:generate"
+    "cy:run:headed": "cypress run --headed"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "cypress": "^13.13.0",
-    "cypress-mochawesome-reporter": "^3.8.2",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0",
-    "mochawesome-report-generator": "^6.2.0"
+    "cypress-mochawesome-reporter": "^3.8.2"
   },
   "dependencies": {
     "cypress-xpath": "^2.0.1"
